--- a/src/scss/partials/_panel--bio.scss
+++ b/src/scss/partials/_panel--bio.scss
@@ -287,7 +287,7 @@
 }
 
 .bio__paragraph--large {
-	font-family: 'MKG', sans-serif;
+	font-family: 'K-Medium', sans-serif;
 	font-size: 1.2rem; 
 	line-height: 1.5;
 	margin-bottom: 1.5rem;
@@ -303,7 +303,7 @@
 .bio__tab {
 	grid-area: tab-;
 	writing-mode: vertical-lr;
-	font-family: 'RKG', sans-serif;
+	font-family: 'K-Regular', sans-serif;
 	font-size: 1.1rem;
 	color: #A9ABB7;
 	text-transform: uppercase;
