--- a/src/scss/partials/_section--bio.scss
+++ b/src/scss/partials/_section--bio.scss
@@ -296,7 +296,7 @@
 .bio__text--mask {
 	position: absolute;
 	height: 100%;
-	width: 500px; 
+	// width: 500px; 
 	opacity: 1;
 	background-color: #00FDDC;
 	transform-origin: center left;
