--- a/src/scss/partials/_section--bio.scss
+++ b/src/scss/partials/_section--bio.scss
@@ -163,18 +163,6 @@
 	background-color: #b8bdc2;
 }
 
-.bio__diags {
-	position: absolute;
-	z-index: 11;  
-	width: 100vw;
-	height: 8rem;
-	left: 30px;
-	bottom: 0;
-	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAOklEQVQoU43MSwoAMAgD0eT+h7ZYaOlHo7N+DNHL2HAGgBWcyGcKbqTghTL4oQiG6IUpOqFEC5bI4QD8PAoKd9j4XwAAAABJRU5ErkJggg==);
-	mix-blend-mode: soft-light;
-	opacity: 0.25;
-}
-
 .headshot__image {
 	/*   width:100%;
 	height:100%; */
@@ -336,7 +324,7 @@
 .bio__tab-border {
 	grid-area: tab-;
 	justify-self: end;
-	background-color: #55DDE0;
+	background-color: $palette--turquoise-blue;
 	width: 3px;
 	/* position: relative; */
 	/* left: 51px; */
@@ -381,7 +369,7 @@
 	padding: 1rem 2rem;
 	cursor: pointer;
 	color: white;
-	border: 5px solid #FAFFD8;
+	border: 5px solid $palette--light-yellow;
 	top: -2.7rem;
 	transition: background-color border-color 0.3s ease-in-out;
 	user-select: none;
@@ -396,3 +384,16 @@
 .tile {
 	background-repeat: repeat;
 }
+
+.bg__diags--bio {
+	z-index: 11;  
+    width: 100vw;
+    height: 8rem;
+    left: 30px;
+    bottom: 0;
+    opacity: 0.25;
+}
+
+
+
+
