--- a/src/scss/partials/_section--bio.scss
+++ b/src/scss/partials/_section--bio.scss
@@ -1,118 +1,124 @@
 .section--bio {
 	position: relative;
-	display: grid;
-
-	/*
-		https://www.smashingmagazine.com/2017/10/naming-things-css-grid-layout/
-		[the grid line names]
-			the track widths
-	*/
-	grid-template-columns: 
-		[ section--start  
-		  dark-bg--start 
-		  nav-hover--start ] 
-
-				20px 
-
-		[ nav-content--start ] 
-
-				max-content 
-
-		[ nav-content--end 
-		  headshot--start 
-		  caption--start ] 
-
-				20px 
-
-		[ nav-hover--end ] 
-
-				minmax(40px, 0.5fr) 
-
-		[ dark-bg--end ] 
-
-				0.2fr
-
-		[ headshot--end 
-		  caption--end 
-		  gutter--before-text--start ] 
-
-				40px 
-
-		[ text--start 
-		  gutter--before-text--end 
-		  button--resume-pdf--start 
-		  tab--start ] 
-
-				1fr 
-
-		[ text--end 
-		  gutter--after-text--start 
-		  button--resume-pdf--end  
-		  tab--end ] 
-
-				40px 
-
-		[ gutter--after-text--end 
-		  ] 
-
-				minmax(20px, 40px) 
-
-		[ section--end ];
-
-	/*
-		[ Grid lines names. 
-		  Multiple can be used. Declare 
-		  within brackets ]
-
-			the track heights
-	
-	*/
-	grid-template-rows: 
-		[ section--start
-		  gutter--top--start
-		  dark-bg--start
-		  nav-content--start ] 
-
-			20px 
-
-		[ gutter--top--end 
-		  tab--start ] 
-		
-			max-content 
-		
-		[ gutter--before-text--start ] 
-		
-			40px 
-		
-		[ tab--end
-			gutter--before-text--end
-		  text--start
-		  headshot--start ] 
-
-			minmax(500px, 1fr)  
-		
-		[ text--end
-		  headshot--end 
-		  caption--start
-		  button--resume-pdf--start  ] 
-		
-			min-content 
-		
-		[ caption--end 
-		  gutter--last--start  ] 
-			
-			minmax(20px, 100px)
-		
-		[ section--end 
-		  gutter--last--end
-		  dark-bg--end
-		  nav-content--end 
-		  button--resume-pdf--end ];
-
-
-	height: 100vh;
-	width: 100vw;
+	display: block;
 	background-color: $gray--mid;
+
+	@include mq('md') {
+
+		display: grid;
+
+		/*
+			https://www.smashingmagazine.com/2017/10/naming-things-css-grid-layout/
+			[the grid line names]
+				the track widths
+		*/
+		grid-template-columns: 
+			[ section--start  
+			  dark-bg--start 
+			  nav-hover--start ] 
+
+					20px 
+
+			[ nav-content--start ] 
+
+					max-content 
+
+			[ nav-content--end 
+			  headshot--start 
+			  caption--start ] 
+
+					20px 
+
+			[ nav-hover--end ] 
+
+					minmax(40px, 0.5fr) 
+
+			[ dark-bg--end ] 
+
+					0.2fr
+
+			[ headshot--end 
+			  caption--end 
+			  gutter--before-text--start ] 
+
+					40px 
+
+			[ text--start 
+			  gutter--before-text--end 
+			  button--resume-pdf--start 
+			  tab--start ] 
+
+					1fr 
+
+			[ text--end 
+			  gutter--after-text--start 
+			  button--resume-pdf--end  
+			  tab--end ] 
+
+					40px 
+
+			[ gutter--after-text--end 
+			  ] 
+
+					minmax(20px, 40px) 
+
+			[ section--end ];
+
+		/*
+			[ Grid lines names. 
+			  Multiple can be used. Declare 
+			  within brackets ]
+
+				the track heights
+		
+		*/
+		grid-template-rows: 
+			[ section--start
+			  gutter--top--start
+			  dark-bg--start
+			  nav-content--start ] 
+
+				20px 
+
+			[ gutter--top--end 
+			  tab--start ] 
+			
+				max-content 
+			
+			[ gutter--before-text--start ] 
+			
+				40px 
+			
+			[ tab--end
+				gutter--before-text--end
+			  text--start
+			  headshot--start ] 
+
+				minmax(500px, 1fr)  
+			
+			[ text--end
+			  headshot--end 
+			  caption--start
+			  button--resume-pdf--start  ] 
+			
+				min-content 
+			
+			[ caption--end 
+			  gutter--last--start  ] 
+				
+				minmax(20px, 100px)
+			
+			[ section--end 
+			  gutter--last--end
+			  dark-bg--end
+			  nav-content--end 
+			  button--resume-pdf--end ];
+
+
+		height: 100vh;
+		width: 100vw;
+	}
+
 
 	/* background: linear-gradient(left bottom, #1e5799 0%,#2989d8 50%,#207cca 100%,#7db9e8 100%); */
 }
@@ -157,10 +163,16 @@
 }
 
 .bio__headshot {
-	grid-area: headshot-;
 	position: relative;
-	box-shadow: inset 0 0 0 -20px white;
 	background-color: #b8bdc2;
+	height: 60vh;
+	user-select: none;
+	
+	@include mq('md') {
+		height: auto;
+		grid-area: headshot-;
+		box-shadow: inset 0 0 0 -20px white;
+	}
 }
 
 .headshot__image {
@@ -244,37 +256,43 @@
 }
 
 .bio__text {
-	grid-area: text-;
 
-	// to bring this above the headshot image 
-	// which gets pulled out of the Grid's stacking
-	// because of the transform Greensock gives the headshot image
 
-	// ensure hugher value than highest headshot image z-indexes
-	z-index: 10;
+	@include mq('md') {
+		padding: 4rem 0;
 
-	column-gap: 2rem;
-	column-width: 275px;
-	column-rule: solid 1px #b3b3b3;
+		grid-area: text-;
 
-	padding: 4rem 0;
+		// to bring this above the headshot image 
+		// which gets pulled out of the Grid's stacking
+		// because of the transform Greensock gives the headshot image
 
-	/* overflow: auto; */
-	max-width: 700px;
+		// ensure higher value than highest headshot image z-indexes
+		z-index: 10;
 
-	/* opacity: 0.5; */
+		column-gap: 2rem;
+		column-width: 275px;
+		column-rule: solid 1px #b3b3b3;
 
-	/* 	
-	text-overflow: ellipsis;
 
-	Required for text-overflow to do anything
-	white-space: nowrap;
-	overflow: hidden; 
-	*/
+		/* overflow: auto; */
+		max-width: 700px;
 
-	/* transform: translateX(100px); */
-	/* transform: rotate(-2.5deg); */
-	opacity: 1;
+		/* opacity: 0.5; */
+
+		/* 	
+		text-overflow: ellipsis;
+
+		Required for text-overflow to do anything
+		white-space: nowrap;
+		overflow: hidden; 
+		*/
+
+		/* transform: translateX(100px); */
+		/* transform: rotate(-2.5deg); */
+		opacity: 1;
+
+	}
 }
 
 .bio__text--mask {
@@ -310,15 +328,21 @@
 }
 
 .bio__tab {
-	grid-area: tab-;
-	writing-mode: vertical-lr;
-	font-family: 'K-Regular', sans-serif;
-	font-size: 1.1rem;
-	color: #A9ABB7;
-	text-transform: uppercase;
-	transform: rotate(180deg);
-	letter-spacing: 1px;
-	margin: 0 0.8rem;
+
+	display: none;
+
+	@include mq('md') {
+		display: block;
+		grid-area: tab-;
+		writing-mode: vertical-lr;
+		font-family: 'K-Regular', sans-serif;
+		font-size: 1.1rem;
+		color: #A9ABB7;
+		text-transform: uppercase;
+		transform: rotate(180deg);
+		letter-spacing: 1px;
+		margin: 0 0.8rem;
+	}
 }
 
 .bio__tab-border {
@@ -356,12 +380,12 @@
 }
 
 .button--resume-pdf {
-	grid-area: button--resume-pdf-;
-	align-self: flex-end;
-	justify-self: flex-end;
-	position: absolute;
+	position: relative;
+	margin: 0 2rem 2rem 2rem;
 	z-index: 11;
 	height: 4rem;
+	display: block;
+
 	text-transform: uppercase;
 	font-family: "K-Medium";
 	font-size: 0.9rem;
@@ -370,9 +394,17 @@
 	cursor: pointer;
 	color: white;
 	border: 5px solid $palette--light-yellow;
-	top: -2.7rem;
-	transition: background-color border-color 0.3s ease-in-out;
 	user-select: none;
+
+	@include mq('md') {
+		grid-area: button--resume-pdf-;
+		align-self: flex-end;
+		justify-self: flex-end;
+		position: absolute;
+		top: -2.7rem;
+		transition: background-color border-color 0.3s ease-in-out;
+    }
+
 }
 
 .button--resume-pdf:hover {
