--- a/src/scss/partials/_section--bio.scss
+++ b/src/scss/partials/_section--bio.scss
@@ -311,6 +311,8 @@
 .bio__text p {
 	background: #b8bdc2;
 	color: #276688;
+    font-size: 1.1rem;
+    line-height: 1.4;
 }
 
 .bio__paragraph--large {
